Project zscrape3 {
  database_type: "PostgreSQL"
}

Table folders {
  id uuid [pk, default: `gen_random_uuid()`]

  name varchar(255) [not null, unique]

  is_admin boolean [not null, default: false, note: "true = private admin workspace, hidden from normal users"]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (name) [unique]
    (created_at)
    (is_admin, created_at)
  }
}

Table videos {
  id uuid [pk, default: `gen_random_uuid()`]

  folder_id uuid [not null, ref: > folders.id]

  title text [not null]

  duration_seconds integer [not null]

  url text [not null]

  platform varchar(50) [not null]

  thumbnail text

  upload_date date

  file_size_bytes bigint

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (folder_id)
    (folder_id, url) [unique]
    (folder_id, upload_date)
    (folder_id, created_at)
    (platform)
    (created_at)
  }
}

Table failed_save_urls {
  id uuid [pk, default: `gen_random_uuid()`]

  folder_id uuid [not null, ref: > folders.id]

  url text [not null]

  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (folder_id)
    (created_at)
    (url)
  }
}

Enum download_status_enum {
  fresh       [note: "Video added but never touched by user"]
  pending     [note: "Queued for download"]
  downloaded  [note: "Successfully downloaded"]
  cancelled   [note: "User cancelled the download"]
  failed      [note: "Download failed"]
}

Table video_download_status {
  id uuid [pk, default: `gen_random_uuid()`]

  video_id uuid [not null, unique, ref: > videos.id]

  status download_status_enum [not null, default: "fresh"]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (video_id) [unique]
    (status)
    (created_at)
  }
}